# rust-cfg-lib

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
resources/: testdata.txt
resources/derived/: example.cfg  test.cfg  testwin.cfg
src/: config.rs  lib.rs
